--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="w-full max-w-4xl flex items-center justify-between mb-8 border-b-4 border-black pb-4">
         <div class="flex items-center gap-2">
             <i data-lucide="globe" class="w-7 h-7 text-black"></i>
-            <h1 class="text-2xl font-black uppercase tracking-tight">GlobalSync PX</h1>
+            <h1 class="text-2xl font-black uppercase tracking-tight">Applied Build Exercise</h1>
         </div>
         <div class="flex items-center gap-4 md:gap-6">
             <button id="restart-btn" onclick="resetExercise()" class="hidden flex items-center gap-2 text-sm font-bold bg-white border-2 border-black px-3 py-1.5 rounded-full hover:bg-brand-yellow transition-colors shadow-[2px_2px_0px_0px_rgba(0,0,0,1)] active:translate-y-px active:shadow-none" title="Restart Exercise">
